--- a/frontend/src/App.global.css
+++ b/frontend/src/App.global.css
@@ -18,17 +18,27 @@
   padding: 14px;
 }
 
+.settings {
+  width: 150px;
+  padding-left: 40px;
+}
+
 .menu {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  bottom: 0;
 }
 
 .top-menu {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: center;
   margin: 10px;
+}
+
+.bottom-menu {
+  display: absolute;
 }
 
 .recording {
@@ -36,14 +46,6 @@
   height: 25px;
   border-radius: 4px;
   color: #ffffff;
-}
-
-.settings {
-  position: absolute; 
-  right: 0;
-  left: 1000px;
-  float:right;
-  justify-content: flex-end;
 }
 
 .red {
