--- a/frontend/src/App.global.css
+++ b/frontend/src/App.global.css
@@ -37,6 +37,11 @@
   margin: 10px;
 }
 
+.menu-right {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
 .bottom-menu {
   display: absolute;
 }
@@ -60,6 +65,9 @@
   background: #00c814;
 }
 
+.grey {
+  background: #6B7280
+}
 .icon1,
 .icon2 {
   padding-right: 10px;
@@ -70,6 +78,15 @@
 }
 
 /*
+
+body {
+  background: linear-gradient(
+    200.96deg,
+    #fedc2a -29.09%,
+    #dd5789 51.77%,
+    #7a2c9e 129.35%
+  );
+}
 //padding: 14px;
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
